// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displayOnly is true 1`] = `
<div
  className="form flex-100 layout-row
        layout-align-none-center layout-wrap"
>
  <div
    className="flex layout-row layout-wrap"
  >
    <div
      className="form_label flex-40 layout-row
          layout-align-start-center"
    >
      <p
        className="flex-none"
      >
        TEXT
      </p>
    </div>
    <div
      className="flex-60 layout-row layout-align-center-center"
    >
      <p
        className="flex-none pointy"
        onClick={[Function]}
      >
        <Truncate
          ellipsis="…"
          lines={1}
          trimWhitespace={false}
        >
          FOO_DOCUMENT_TEXT
           
        </Truncate>
      </p>
    </div>
  </div>
  <div
    className="icon_row flex-none layout-row layout-align-none-center"
  >
    <div
      className="icon_btn flex-none layout-row
            layout-align-center-center"
    />
    <div
      className="icon_btn flex-none layout-row
              layout-align-center-center"
      onClick={[Function]}
    >
      <i
        className="fa fa-trash"
      />
    </div>
    <div
      className="icon_btn flex-none
            layout-row layout-align-center-center"
    />
  </div>
  <div
    className="file_error  flex-100
          layout-row layout-align-center"
  >
    <p
      className="flex-100"
    >
      Only .jpg, .png, .pdf, .tiff, .doc & .docx files allowed
    </p>
  </div>
</div>
`;

exports[`multiple is true 1`] = `
<div
  className="form flex-100 layout-row
        layout-align-none-center layout-wrap"
>
  <div
    className="flex layout-row layout-wrap"
  >
    <div
      className="form_label flex-40 layout-row
          layout-align-start-center"
    >
      <p
        className="flex-none"
      >
        TEXT
      </p>
    </div>
    <div
      className="flex-60 layout-row layout-align-center-center"
    >
      <p
        className="flex-none pointy"
        onClick={[Function]}
      >
        <Truncate
          ellipsis="…"
          lines={1}
          trimWhitespace={false}
        >
          FOO_DOCUMENT_TEXT
           
        </Truncate>
      </p>
    </div>
  </div>
  <div
    className="icon_row flex-none layout-row layout-align-none-center"
  >
    <div
      className="flex-none layout-row layout-align-end-center upload_btn_wrapper "
      data-for="UUID_MOCK_KEY_2"
      data-tip="TOOLTIP"
    >
      <form>
        <button
          className="icon_btn flex-none layout-row
                    layout-align-center-center"
          onClick={[Function]}
        >
          <i
            className="fa fa-upload clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
          />
        </button>
        <ReactTooltip
          className="tooltip"
          effect="solid"
          id="UUID_MOCK_KEY_2"
          insecure={true}
          resizeHide={true}
          wrapper="div"
        />
        <input
          name="TYPE"
          onChange={[Function]}
          type="file"
        />
      </form>
    </div>
    <div
      className="icon_btn flex-none layout-row
            layout-align-center-center"
    />
    <div
      className="icon_btn flex-none
            layout-row layout-align-center-center"
    />
  </div>
  <div
    className="file_error  flex-100
          layout-row layout-align-center"
  >
    <p
      className="flex-100"
    >
      Only .jpg, .png, .pdf, .tiff, .doc & .docx files allowed
    </p>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="form flex-100 layout-row
        layout-align-none-center layout-wrap"
>
  <div
    className="flex layout-row layout-wrap"
  >
    <div
      className="form_label flex-40 layout-row
          layout-align-start-center"
    >
      <p
        className="flex-none"
      >
        TEXT
      </p>
    </div>
    <div
      className="flex-60 layout-row layout-align-center-center"
    >
      <p
        className="flex-none pointy"
        onClick={[Function]}
      >
        <Truncate
          ellipsis="…"
          lines={1}
          trimWhitespace={false}
        >
          FOO_DOCUMENT_TEXT
           
        </Truncate>
      </p>
    </div>
  </div>
  <div
    className="icon_row flex-none layout-row layout-align-none-center"
  >
    <div
      className="flex-none layout-row layout-align-end-center upload_btn_wrapper "
      data-for="UUID_MOCK_KEY_0"
      data-tip="TOOLTIP"
    >
      <form>
        <button
          className="icon_btn flex-none layout-row
                    layout-align-center-center"
          onClick={[Function]}
        >
          <i
            className="fa fa-upload clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
          />
        </button>
        <ReactTooltip
          className="tooltip"
          effect="solid"
          id="UUID_MOCK_KEY_0"
          insecure={true}
          resizeHide={true}
          wrapper="div"
        />
        <input
          name="TYPE"
          onChange={[Function]}
          type="file"
        />
      </form>
    </div>
    <div
      className="icon_btn flex-none layout-row
              layout-align-center-center"
      onClick={[Function]}
    >
      <i
        className="fa fa-trash"
      />
    </div>
    <div
      className="icon_btn flex-none
            layout-row layout-align-center-center"
    />
  </div>
  <div
    className="file_error  flex-100
          layout-row layout-align-center"
  >
    <p
      className="flex-100"
    >
      Only .jpg, .png, .pdf, .tiff, .doc & .docx files allowed
    </p>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="form flex-100 layout-row
        layout-align-none-center layout-wrap"
>
  <div
    className="flex layout-row layout-wrap"
  >
    <div
      className="form_label flex-40 layout-row
          layout-align-start-center"
    >
      <p
        className="flex-none"
      >
        TEXT
      </p>
    </div>
    <div
      className="flex-60 layout-row layout-align-center-center"
    >
      <p
        className="flex-none pointy"
        onClick={[Function]}
      >
        <Truncate
          ellipsis="…"
          lines={1}
          trimWhitespace={false}
        >
          FOO_DOCUMENT_TEXT
           
        </Truncate>
      </p>
    </div>
  </div>
  <div
    className="icon_row flex-none layout-row layout-align-none-center"
  >
    <div
      className="flex-none layout-row layout-align-end-center upload_btn_wrapper "
      data-for="UUID_MOCK_KEY_4"
      data-tip="TOOLTIP"
    >
      <form>
        <button
          className="icon_btn flex-none layout-row
                    layout-align-center-center"
          onClick={[Function]}
        >
          <i
            className="fa fa-upload clip"
            style={
              Object {
                "color": "black",
              }
            }
          />
        </button>
        <ReactTooltip
          className="tooltip"
          effect="solid"
          id="UUID_MOCK_KEY_4"
          insecure={true}
          resizeHide={true}
          wrapper="div"
        />
        <input
          name="TYPE"
          onChange={[Function]}
          type="file"
        />
      </form>
    </div>
    <div
      className="icon_btn flex-none layout-row
              layout-align-center-center"
      onClick={[Function]}
    >
      <i
        className="fa fa-trash"
      />
    </div>
    <div
      className="icon_btn flex-none
            layout-row layout-align-center-center"
    />
  </div>
  <div
    className="file_error  flex-100
          layout-row layout-align-center"
  >
    <p
      className="flex-100"
    >
      Only .jpg, .png, .pdf, .tiff, .doc & .docx files allowed
    </p>
  </div>
</div>
`;

exports[`viewer is true 1`] = `
<div
  className="form flex-100 layout-row
        layout-align-none-center layout-wrap"
>
  <div
    className="flex layout-row layout-wrap"
  >
    <div
      className="form_label flex-40 layout-row
          layout-align-start-center"
    >
      <p
        className="flex-none"
      >
        TEXT
      </p>
    </div>
    <div
      className="flex-60 layout-row layout-align-center-center"
    >
      <p
        className="flex-none pointy"
        onClick={[Function]}
      >
        <Truncate
          ellipsis="…"
          lines={1}
          trimWhitespace={false}
        >
          FOO_DOCUMENT_TEXT
           
        </Truncate>
      </p>
    </div>
  </div>
  <div
    className="viewer_row flex-none layout-row layout-align-none-center"
  >
    <div
      className="flex-none layout-row layout-align-end-center upload_btn_wrapper "
      data-for="UUID_MOCK_KEY_3"
      data-tip="TOOLTIP"
    >
      <form>
        <button
          className="icon_btn flex-none layout-row
                    layout-align-center-center"
          onClick={[Function]}
        >
          <i
            className="fa fa-upload clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
              }
            }
          />
        </button>
        <ReactTooltip
          className="tooltip"
          effect="solid"
          id="UUID_MOCK_KEY_3"
          insecure={true}
          resizeHide={true}
          wrapper="div"
        />
        <input
          name="TYPE"
          onChange={[Function]}
          type="file"
        />
      </form>
    </div>
    <div
      className="icon_btn flex-none layout-row
              layout-align-center-center"
      onClick={[Function]}
    >
      <i
        className="fa fa-trash"
      />
    </div>
    <a
      className="icon_btn flex-none layout-row layout-align-center-center"
      href="FOO_SIGNED_URL"
      target="_blank"
    >
      <i
        className="clip fa fa-eye"
        style={
          Object {
            "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
          }
        }
      />
    </a>
  </div>
  <div
    className="file_error  flex-100
          layout-row layout-align-center"
  >
    <p
      className="flex-100"
    >
      Only .jpg, .png, .pdf, .tiff, .doc & .docx files allowed
    </p>
  </div>
</div>
`;
